# Taking on -> https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["wheel", "setuptools >= 62.0.0"]

[project]
authors = [{name = "Alvaro Monllor", email = "alvarodrumer54@gmail.com"}]
name = "misctools"
description = "Miscellaneous tools for Python"
version = "0.1.0"
license = {file = "LICENSE"}
readme = "README.md"

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Natural Language :: Spanish",
  "Typing :: Typed",
]
dependencies = [
    "colorama>=0.4.4", 
    "psutil>=5.9.0", "", 
    "chardet>=4.0.0",
    "typing_extensions>=3.7.4",
    "csv>=0.0.0",
    "xmltodict",
    "toml>=0.10.0",
]
keywords = [
  "Python",
  "Python-tools",
  "Miscellaneous tools"
]
requires-python = ">=3.10.2"

[project.urls]
homepage = "https://github.com/Backist"
repository = "https://github.com/Backist/Misctools"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["misctools*"]

[tool.mypy]
python_version = "3.10.2"
strict = true

[tool.black]
lineLength = 88

[tool.isort]
profile = "black"
